--- a/pub/wefound.yaml
+++ b/pub/wefound.yaml
@@ -6,24 +6,23 @@ log-level: info
 external-controller: 0.0.0.0:9090
 proxies:
   - &id001
-    name: 🇺🇸_US_美国->🇮🇳_IN_印度_1
+    name: 🇺🇸_US_美国_1
     type: vmess
-    server: 104.17.18.26
+    server: fhc2.shabijichang.com
     port: 80
     cipher: auto
-    uuid: 5180444a-4756-43b4-960b-49eb9052e4e8
+    uuid: c458695d-6908-45c3-9512-e0c46418454c
     alterId: 0
     tls: false
     skip-cert-verify: true
     network: ws
     ws-opts:
-      path: /
       headers:
-        host: a.109420.xyz
+        host: fhc2.shabijichang.com
   - &id002
-    name: 🇺🇸_US_美国->🇬🇧_GB_英国_1
+    name: 🇺🇸_US_美国->🇬🇧_GB_英国
     type: vmess
-    server: mrb2.shabijichang.com
+    server: ld2.shabijichang.com
     port: 80
     cipher: auto
     uuid: c458695d-6908-45c3-9512-e0c46418454c
@@ -34,24 +33,49 @@ proxies:
     ws-opts:
       path: /
       headers:
-        host: mrb2.shabijichang.com
+        host: ld2.shabijichang.com
   - &id003
-    name: 🇺🇸_US_美国_1
+    name: 🇺🇸_US_美国_2
     type: vmess
-    server: fra.mahdivps.tk
-    port: 2053
+    server: 107.167.16.85
+    port: 443
     cipher: auto
-    uuid: bf922ee1-c3e2-4229-af39-ed63c6aa09f7
-    alterId: 0
+    uuid: 7640a1e7-9701-428e-a4b2-19b3e7dd6f9f
+    alterId: 64
     tls: true
     skip-cert-verify: true
     network: ws
     ws-opts:
-      path: /tvc
+      path: /path/080822272914
       headers:
-        host: fra.mahdivps.tk
+        host: www.51109057.xyz
   - &id004
-    name: 🇺🇸_US_美国_2
+    name: 🇺🇸_US_美国_3
+    type: vmess
+    server: br.gy.youxuan-1.66688888.xyz
+    port: 80
+    cipher: auto
+    uuid: efcb7d7c-c582-46f5-eeff-0e553342528d
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /tg@hkaa0
+      headers:
+        host: br.gy.youxuan-1.66688888.xyz
+  - &id005
+    name: 🇬🇧_GB_英国
+    type: trojan
+    server: 13.41.180.122
+    port: 22222
+    udp: true
+    password: telegram-id-privatevpns
+    sni: trj.rollingnext.co.uk
+    skip-cert-verify: true
+    network: tcp
+  - &id006
+    name: 🇺🇸_US_美国_4
     type: vmess
     server: sbl2.shabijichang.com
     port: 80
@@ -65,38 +89,8 @@ proxies:
       path: /
       headers:
         host: sbl2.shabijichang.com
-  - &id005
-    name: 🇺🇸_US_美国->🇩🇪_DE_德国
-    type: vmess
-    server: flkf2.shabijichang.com
-    port: 80
-    cipher: auto
-    uuid: c458695d-6908-45c3-9512-e0c46418454c
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /
-      headers:
-        host: flkf2.shabijichang.com
-  - &id006
-    name: 🇺🇸_US_美国->🇳🇱_NL_荷兰
-    type: vmess
-    server: 45.199.138.191
-    port: 30000
-    cipher: auto
-    uuid: 418048af-a293-4b99-9b0c-98ca3580dd24
-    alterId: 64
-    tls: true
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /path/1696251522438
-      headers:
-        host: www.42077230.xyz
   - &id007
-    name: 🇺🇸_US_美国_3
+    name: 🇺🇸_US_美国_5
     type: vmess
     server: jd2.shabijichang.com
     port: 80
@@ -111,75 +105,47 @@ proxies:
       headers:
         host: jd2.shabijichang.com
   - &id008
-    name: 🇺🇸_US_美国->🇬🇧_GB_英国_2
-    type: vmess
-    server: ld2.shabijichang.com
-    port: 80
-    cipher: auto
-    uuid: c458695d-6908-45c3-9512-e0c46418454c
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /
-      headers:
-        host: ld2.shabijichang.com
-  - &id009
-    name: 🇺🇸_US_美国_4
-    type: vmess
-    server: 206.168.190.219
-    port: 2082
-    cipher: none
-    uuid: e31ca750-71f7-11ee-b920-1239d0255272
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /vmws
-  - &id010
-    name: 🇺🇸_US_美国->🇧🇷_BR_巴西
-    type: vmess
-    server: sbl4.shabijichang.com
-    port: 80
-    cipher: auto
-    uuid: c458695d-6908-45c3-9512-e0c46418454c
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /
-      headers:
-        host: sbl4.shabijichang.com
-  - &id011
-    name: 🇺🇸_US_美国_5
-    type: vmess
-    server: 206.168.190.219
-    port: 8080
-    cipher: auto
-    uuid: e31ca750-71f7-11ee-b920-1239d0255272
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /vmws
-  - &id012
-    name: 🇫🇷_FR_法国
+    name: 🇩🇪_DE_德国
     type: trojan
-    server: 35.181.12.210
+    server: 18.153.119.231
     port: 22222
     udp: true
     password: telegram-id-directvpn
     sni: trj.rollingnext.co.uk
     skip-cert-verify: true
     network: tcp
-  - &id013
-    name: 🇺🇸_US_美国->🇸🇦_SA_沙特阿拉伯
+  - &id009
+    name: 🇺🇸_US_美国_6
     type: vmess
-    server: jd3.shabijichang.com
+    server: 45.199.138.186
+    port: 30000
+    cipher: auto
+    uuid: 4ec0ae62-de09-4029-904a-0313d4628ecf
+    alterId: 64
+    tls: true
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /path/1696682720138
+      headers:
+        host: www.19229362.xyz
+  - &id010
+    name: 🇨🇦_CA_加拿大
+    type: vmess
+    server: cadld2.gophers.gay
+    port: 21106
+    cipher: auto
+    uuid: 6713cd03-2cd4-49e9-9d8a-b768ee0a72fb
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /
+  - &id011
+    name: 🇺🇸_US_美国->🇩🇪_DE_德国
+    type: vmess
+    server: flkf2.shabijichang.com
     port: 80
     cipher: auto
     uuid: c458695d-6908-45c3-9512-e0c46418454c
@@ -190,14 +156,14 @@ proxies:
     ws-opts:
       path: /
       headers:
-        host: jd3.shabijichang.com
-  - &id014
-    name: 🇺🇸_US_美国->🇮🇳_IN_印度_2
+        host: flkf2.shabijichang.com
+  - &id012
+    name: 🇺🇸_US_美国_7
     type: vmess
-    server: 104.26.8.44
+    server: wnd2.shabijichang.com
     port: 80
     cipher: auto
-    uuid: 5180444a-4756-43b4-960b-49eb9052e4e8
+    uuid: c458695d-6908-45c3-9512-e0c46418454c
     alterId: 0
     tls: false
     skip-cert-verify: true
@@ -205,7 +171,48 @@ proxies:
     ws-opts:
       path: /
       headers:
-        host: a.109420.xyz
+        host: wnd2.shabijichang.com
+  - &id013
+    name: 🇺🇸_US_美国->🇮🇳_IN_印度
+    type: vmess
+    server: mm3.shabijichang.com
+    port: 80
+    cipher: auto
+    uuid: c458695d-6908-45c3-9512-e0c46418454c
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /
+      headers:
+        host: mm3.shabijichang.com
+  - &id014
+    name: 🇺🇸_US_美国_8
+    type: vmess
+    server: 195.123.240.170
+    port: 41916
+    cipher: auto
+    uuid: 12772df9-485f-413c-edbf-3f562d61de4e
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: tcp
+  - &id015
+    name: 🇺🇸_US_美国_9
+    type: vmess
+    server: 104.21.75.246
+    port: 80
+    cipher: auto
+    uuid: c458695d-6908-45c3-9512-e0c46418454c
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /
+      headers:
+        host: sbl2.shabijichang.com
 proxy-groups:
   - name: PROXY
     type: select
@@ -246,6 +253,7 @@ proxy-groups:
       - *id012
       - *id013
       - *id014
+      - *id015
   - name: LOAD-BALANCE
     type: load-balance
     url: http://www.gstatic.com/generate_204
@@ -265,6 +273,7 @@ proxy-groups:
       - *id012
       - *id013
       - *id014
+      - *id015
   - name: SELECT
     type: select
     proxies:
@@ -282,6 +291,7 @@ proxy-groups:
       - *id012
       - *id013
       - *id014
+      - *id015
 rules:
   - RULE-SET,applications,DIRECT
   - DOMAIN,clash.razord.top,DIRECT
