--- a/pub/cfmem.yaml
+++ b/pub/cfmem.yaml
@@ -6,12 +6,12 @@ log-level: info
 external-controller: 0.0.0.0:9090
 proxies:
   - &id001
-    name: 🇨🇦_CA_加拿大
+    name: 🇺🇸_US_美国->🇬🇧_GB_英国
     type: vmess
-    server: 108.181.10.17
+    server: ld2.shabijichang.com
     port: 80
     cipher: auto
-    uuid: 474e8680-701f-11ee-b436-205c6d5f5d78
+    uuid: c458695d-6908-45c3-9512-e0c46418454c
     alterId: 0
     tls: false
     skip-cert-verify: true
@@ -19,43 +19,8 @@ proxies:
     ws-opts:
       path: /
       headers:
-        host: teams.microsoft.com
+        host: ld2.shabijichang.com
   - &id002
-    name: 🇨🇭_CH_瑞士
-    type: ss
-    server: 84.17.53.163
-    port: 80
-    password: asdKkaskJKfnsa
-    cipher: aes-256-cfb
-  - &id003
-    name: 🇺🇸_US_美国->🇳🇱_NL_荷兰
-    type: vmess
-    server: 45.199.138.191
-    port: 30000
-    cipher: auto
-    uuid: 418048af-a293-4b99-9b0c-98ca3580dd24
-    alterId: 64
-    tls: true
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /path/1696251522438
-      headers:
-        host: www.42077230.xyz
-  - &id004
-    name: 🇺🇸_US_美国_1
-    type: vmess
-    server: 206.168.190.219
-    port: 2082
-    cipher: auto
-    uuid: e31ca750-71f7-11ee-b920-1239d0255272
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /vmws
-  - &id005
     name: 🇺🇸_US_美国->🇮🇳_IN_印度_1
     type: vmess
     server: 104.17.18.26
@@ -70,36 +35,79 @@ proxies:
       path: /
       headers:
         host: a.109420.xyz
+  - &id003
+    name: 🇺🇸_US_美国_1
+    type: vmess
+    server: cfcdn1.sanfencdn9.com
+    port: 2052
+    cipher: auto
+    uuid: ece26ec7-bcfe-4845-8cf1-3d93abc19ce1
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /video/nYAwpBbW
+      headers:
+        host: us5a3a71b5c.pkmkwvxqnn.xyz
+  - &id004
+    name: 🇺🇸_US_美国_2
+    type: vmess
+    server: jd2.shabijichang.com
+    port: 80
+    cipher: auto
+    uuid: 56278a1a-c7cc-459f-b00c-3037e4f99590
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /
+      headers:
+        host: jd2.shabijichang.com
+  - &id005
+    name: 🇺🇸_US_美国->🇰🇷_KR_韩国
+    type: vmess
+    server: cadld2.gophers.gay
+    port: 21106
+    cipher: auto
+    uuid: 6713cd03-2cd4-49e9-9d8a-b768ee0a72fb
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /
   - &id006
-    name: 🇺🇸_US_美国->🇮🇳_IN_印度_2
+    name: 🇺🇸_US_美国_3
     type: vmess
-    server: 104.26.8.44
-    port: 80
+    server: 107.167.16.85
+    port: 443
     cipher: auto
-    uuid: 5180444a-4756-43b4-960b-49eb9052e4e8
-    alterId: 0
-    tls: false
+    uuid: 7640a1e7-9701-428e-a4b2-19b3e7dd6f9f
+    alterId: 64
+    tls: true
     skip-cert-verify: true
     network: ws
     ws-opts:
-      path: /
+      path: /path/080822272914
       headers:
-        host: a.109420.xyz
+        host: www.51109057.xyz
   - &id007
-    name: 🇺🇸_US_美国->🇩🇪_DE_德国
+    name: 🇺🇸_US_美国->🇳🇱_NL_荷兰_1
     type: vmess
-    server: flkf2.shabijichang.com
-    port: 80
+    server: 45.199.138.191
+    port: 30000
     cipher: auto
-    uuid: c458695d-6908-45c3-9512-e0c46418454c
-    alterId: 0
-    tls: false
+    uuid: 418048af-a293-4b99-9b0c-98ca3580dd24
+    alterId: 64
+    tls: true
     skip-cert-verify: true
     network: ws
     ws-opts:
-      path: /
+      path: /path/1696251522438
       headers:
-        host: flkf2.shabijichang.com
+        host: www.42077230.xyz
   - &id008
     name: 🇺🇸_US_美国->🇸🇦_SA_沙特阿拉伯
     type: vmess
@@ -116,9 +124,9 @@ proxies:
       headers:
         host: jd3.shabijichang.com
   - &id009
-    name: 🇺🇸_US_美国->🇮🇳_IN_印度_3
+    name: 🇺🇸_US_美国->🇮🇳_IN_印度_2
     type: vmess
-    server: mm2.shabijichang.com
+    server: hdlb2.shabijichang.com
     port: 80
     cipher: auto
     uuid: c458695d-6908-45c3-9512-e0c46418454c
@@ -129,9 +137,83 @@ proxies:
     ws-opts:
       path: /
       headers:
-        host: mm2.shabijichang.com
+        host: hdlb2.shabijichang.com
   - &id010
-    name: 🇺🇸_US_美国_2
+    name: 🇺🇸_US_美国_4
+    type: vmess
+    server: 206.168.190.219
+    port: 2082
+    cipher: auto
+    uuid: e31ca750-71f7-11ee-b920-1239d0255272
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /vmws
+  - &id011
+    name: 🇺🇸_US_美国->🇳🇱_NL_荷兰_2
+    type: vmess
+    server: 156.225.67.234
+    port: 30000
+    cipher: auto
+    uuid: 93503dd5-245a-4eb1-ae2a-57ab9f2b3c29
+    alterId: 64
+    tls: true
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /path/1698239888914
+      headers:
+        host: www.47734647.xyz
+  - &id012
+    name: 🇫🇷_FR_法国
+    type: ss
+    server: 51.158.54.209
+    port: 443
+    password: asdKkaskJKfnsa
+    cipher: aes-256-cfb
+  - &id013
+    name: 🇱🇹_LT_立陶宛
+    type: trojan
+    server: 212.24.103.3
+    port: 2053
+    udp: true
+    password: 2228e29d-942a-4ee8-b3c0-f4a846e3f355
+    skip-cert-verify: true
+    network: tcp
+  - &id014
+    name: 🇺🇸_US_美国_5
+    type: vmess
+    server: 156.225.67.104
+    port: 30000
+    cipher: auto
+    uuid: 29a5d48e-24f1-48fd-a5e1-9a46cb31032f
+    alterId: 64
+    tls: true
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /path/1698239888914
+      headers:
+        host: www.41758112.xyz
+  - &id015
+    name: 🇺🇸_US_美国_6
+    type: vmess
+    server: sbl2.shabijichang.com
+    port: 80
+    cipher: auto
+    uuid: c458695d-6908-45c3-9512-e0c46418454c
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /
+      headers:
+        host: sbl2.shabijichang.com
+  - &id016
+    name: 🇺🇸_US_美国_7
     type: vmess
     server: wnd2.shabijichang.com
     port: 80
@@ -145,90 +227,8 @@ proxies:
       path: /
       headers:
         host: wnd2.shabijichang.com
-  - &id011
-    name: 🇫🇷_FR_法国
-    type: ss
-    server: 51.158.54.209
-    port: 443
-    password: asdKkaskJKfnsa
-    cipher: aes-256-cfb
-  - &id012
-    name: 🇺🇸_US_美国_3
-    type: vmess
-    server: 45.199.138.186
-    port: 30000
-    cipher: auto
-    uuid: 4ec0ae62-de09-4029-904a-0313d4628ecf
-    alterId: 64
-    tls: true
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /path/1696682720138
-      headers:
-        host: www.19229362.xyz
-  - &id013
-    name: 🇺🇸_US_美国_4
-    type: vmess
-    server: wnd3.shabijichang.com
-    port: 80
-    cipher: auto
-    uuid: c458695d-6908-45c3-9512-e0c46418454c
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /
-      headers:
-        host: wnd3.shabijichang.com
-  - &id014
-    name: 🇹🇼_TW_台湾->🇺🇸_US_美国
-    type: vmess
-    server: 107.167.182.230
-    port: 80
-    cipher: auto
-    uuid: efcb7d7c-c582-46f5-eeff-0e553342528d
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /tg@hkaa0
-      headers:
-        host: br.gy.youxuan-1.66688888.xyz
-  - &id015
-    name: 🇺🇸_US_美国->🇬🇧_GB_英国_1
-    type: vmess
-    server: mrb2.shabijichang.com
-    port: 80
-    cipher: auto
-    uuid: c458695d-6908-45c3-9512-e0c46418454c
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /
-      headers:
-        host: mrb2.shabijichang.com
-  - &id016
-    name: 🇺🇸_US_美国->🇬🇧_GB_英国_2
-    type: vmess
-    server: ld2.shabijichang.com
-    port: 80
-    cipher: auto
-    uuid: c458695d-6908-45c3-9512-e0c46418454c
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /
-      headers:
-        host: ld2.shabijichang.com
   - &id017
-    name: 🇺🇸_US_美国_5
+    name: 🇺🇸_US_美国_8
     type: vmess
     server: 104.21.75.246
     port: 80
@@ -243,9 +243,9 @@ proxies:
       headers:
         host: sbl2.shabijichang.com
   - &id018
-    name: 🇺🇸_US_美国->🇮🇳_IN_印度_4
+    name: 🇺🇸_US_美国->🇮🇳_IN_印度_3
     type: vmess
-    server: mm3.shabijichang.com
+    server: mm2.shabijichang.com
     port: 80
     cipher: auto
     uuid: c458695d-6908-45c3-9512-e0c46418454c
@@ -256,7 +256,90 @@ proxies:
     ws-opts:
       path: /
       headers:
-        host: mm3.shabijichang.com
+        host: mm2.shabijichang.com
+  - &id019
+    name: 🇺🇸_US_美国_9
+    type: vmess
+    server: wnd3.shabijichang.com
+    port: 80
+    cipher: auto
+    uuid: c458695d-6908-45c3-9512-e0c46418454c
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /
+      headers:
+        host: wnd3.shabijichang.com
+  - &id020
+    name: 🇨🇭_CH_瑞士
+    type: ss
+    server: 84.17.53.163
+    port: 80
+    password: asdKkaskJKfnsa
+    cipher: aes-256-cfb
+  - &id021
+    name: 🇺🇸_US_美国->🇮🇳_IN_印度_4
+    type: vmess
+    server: 104.26.8.44
+    port: 80
+    cipher: auto
+    uuid: 5180444a-4756-43b4-960b-49eb9052e4e8
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /
+      headers:
+        host: a.109420.xyz
+  - &id022
+    name: 🇩🇪_DE_德国_1
+    type: trojan
+    server: 3.120.63.163
+    port: 22222
+    udp: true
+    password: telegram-id-directvpn
+    sni: trj.rollingnext.co.uk
+    skip-cert-verify: true
+    network: tcp
+  - &id023
+    name: 🇵🇰_PK_巴基斯坦
+    type: trojan
+    server: 
+      hk1-reality.fp3kemyh-cm4s-2hak-2gb9-w3534umy2sq5.9d8f269f96b25232-759cbb36d6548597.kaufen
+    port: 443
+    udp: true
+    password: 7e23957d-535a-4dc6-9482-e6f44518da87
+    sni: 13-231-155-134.nhost.00cdn.com
+    skip-cert-verify: true
+    network: tcp
+  - &id024
+    name: 🇨🇳_CN_中国
+    type: vmess
+    server: 124.220.57.75
+    port: 80
+    cipher: auto
+    uuid: 1b3dd95b-f6dc-4f20-97aa-3b365358419c
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /
+      headers:
+        host: 124.220.57.75
+  - &id025
+    name: 🇩🇪_DE_德国_2
+    type: trojan
+    server: 35.157.14.187
+    port: 22222
+    udp: true
+    password: telegram-id-privatevpns
+    sni: trj.rollingnext.co.uk
+    skip-cert-verify: true
+    network: tcp
 proxy-groups:
   - name: PROXY
     type: select
@@ -301,6 +384,13 @@ proxy-groups:
       - *id016
       - *id017
       - *id018
+      - *id019
+      - *id020
+      - *id021
+      - *id022
+      - *id023
+      - *id024
+      - *id025
   - name: LOAD-BALANCE
     type: load-balance
     url: http://www.gstatic.com/generate_204
@@ -324,6 +414,13 @@ proxy-groups:
       - *id016
       - *id017
       - *id018
+      - *id019
+      - *id020
+      - *id021
+      - *id022
+      - *id023
+      - *id024
+      - *id025
   - name: SELECT
     type: select
     proxies:
@@ -345,6 +442,13 @@ proxy-groups:
       - *id016
       - *id017
       - *id018
+      - *id019
+      - *id020
+      - *id021
+      - *id022
+      - *id023
+      - *id024
+      - *id025
 rules:
   - RULE-SET,applications,DIRECT
   - DOMAIN,clash.razord.top,DIRECT
