--- a/pub/cfmem.yaml
+++ b/pub/cfmem.yaml
@@ -6,6 +6,174 @@ log-level: info
 external-controller: 0.0.0.0:9090
 proxies:
   - &id001
+    name: 🇵🇰_PK_巴基斯坦
+    type: trojan
+    server: 
+      us1-reality.fp3kemyh-cm4s-2hak-2gb9-w3534umy2sq5.9d8f269f96b25232-759cbb36d6548597.kaufen
+    port: 443
+    udp: true
+    password: a3f221f8-43d6-4363-8624-ce62d3db0202
+    sni: 13-231-155-134.nhost.00cdn.com
+    skip-cert-verify: true
+    network: tcp
+  - &id002
+    name: 🇺🇸_US_美国->🇵🇱_PL_波兰
+    type: vmess
+    server: b62a948c-faa2-4e8a-bf8a-3ff3121c875a.asoul-diana.xyz
+    port: 443
+    cipher: auto
+    uuid: 5f726fe3-d82e-4da5-a711-8af0cbb2b682
+    alterId: 0
+    tls: true
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /acetaffy.top
+      headers:
+        host: b62a948c-faa2-4e8a-bf8a-3ff3121c875a.asoul-diana.xyz
+  - &id003
+    name: 🇨🇳_CN_中国->🇺🇸_US_美国_1
+    type: vmess
+    server: 120.241.46.222
+    port: 62001
+    cipher: auto
+    uuid: c262002b-8dc8-346f-8b01-28e1825a6a64
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /dabai.in
+      headers:
+        host: data.db-link01.top
+  - &id004
+    name: 🇨🇳_CN_中国->🇺🇸_US_美国_2
+    type: vmess
+    server: 120.241.46.222
+    port: 63091
+    cipher: auto
+    uuid: c262002b-8dc8-346f-8b01-28e1825a6a64
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /dabai.in
+      headers:
+        host: data.db-link01.top
+  - &id005
+    name: 🇨🇳_CN_中国->🇺🇸_US_美国_3
+    type: vmess
+    server: 120.241.46.223
+    port: 62014
+    cipher: auto
+    uuid: c262002b-8dc8-346f-8b01-28e1825a6a64
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /dabai.in
+      headers:
+        host: data.db-link02.top
+  - &id006
+    name: 🇨🇳_CN_中国->🇺🇸_US_美国_4
+    type: vmess
+    server: 120.241.46.222
+    port: 62004
+    cipher: auto
+    uuid: c262002b-8dc8-346f-8b01-28e1825a6a64
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /dabai.in
+      headers:
+        host: data.db-link02.top
+  - &id007
+    name: 🇨🇳_CN_中国->🇺🇸_US_美国_5
+    type: vmess
+    server: 120.241.46.222
+    port: 61001
+    cipher: auto
+    uuid: c262002b-8dc8-346f-8b01-28e1825a6a64
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /dabai.in
+      headers:
+        host: data.db-link01.top
+  - &id008
+    name: 🇨🇳_CN_中国->🇺🇸_US_美国_6
+    type: vmess
+    server: 120.241.46.222
+    port: 62011
+    cipher: auto
+    uuid: c262002b-8dc8-346f-8b01-28e1825a6a64
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /dabai.in
+      headers:
+        host: data.db-link01.top
+  - &id009
+    name: 🇨🇳_CN_中国->🇺🇸_US_美国_7
+    type: vmess
+    server: 120.241.46.222
+    port: 64091
+    cipher: auto
+    uuid: c262002b-8dc8-346f-8b01-28e1825a6a64
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /dabai.in
+      headers:
+        host: data.db-link02.top
+  - &id010
+    name: 🇨🇳_CN_中国
+    type: vmess
+    server: 120.241.46.223
+    port: 61051
+    cipher: auto
+    uuid: c262002b-8dc8-346f-8b01-28e1825a6a64
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /dabai.in
+      headers:
+        host: data.db-link01.top
+  - &id011
+    name: 🇺🇸_US_美国_1
+    type: ss
+    server: 89.187.181.179
+    port: 443
+    password: asdKkaskJKfnsa
+    cipher: aes-256-cfb
+  - &id012
+    name: 🇨🇳_CN_中国->🇺🇸_US_美国_8
+    type: vmess
+    server: 120.241.46.222
+    port: 61002
+    cipher: auto
+    uuid: c262002b-8dc8-346f-8b01-28e1825a6a64
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /dabai.in
+      headers:
+        host: data.db-link02.top
+  - &id013
     name: 🇺🇸_US_美国->🇬🇧_GB_英国
     type: vmess
     server: ld2.shabijichang.com
@@ -20,7 +188,37 @@ proxies:
       path: /
       headers:
         host: ld2.shabijichang.com
-  - &id002
+  - &id014
+    name: 🇺🇸_US_美国_2
+    type: vmess
+    server: www.speedtest.net
+    port: 80
+    cipher: auto
+    uuid: bf75108e-7bec-4fe0-8db9-3d4985dd3bd6
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /
+      headers:
+        host: it1.xv2ray.net
+  - &id015
+    name: 🇺🇸_US_美国_3
+    type: vmess
+    server: wnd3.shabijichang.com
+    port: 80
+    cipher: auto
+    uuid: c458695d-6908-45c3-9512-e0c46418454c
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /
+      headers:
+        host: wnd3.shabijichang.com
+  - &id016
     name: 🇺🇸_US_美国->🇮🇳_IN_印度_1
     type: vmess
     server: 104.17.18.26
@@ -35,23 +233,8 @@ proxies:
       path: /
       headers:
         host: a.109420.xyz
-  - &id003
-    name: 🇺🇸_US_美国_1
-    type: vmess
-    server: cfcdn1.sanfencdn9.com
-    port: 2052
-    cipher: auto
-    uuid: ece26ec7-bcfe-4845-8cf1-3d93abc19ce1
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /video/nYAwpBbW
-      headers:
-        host: us5a3a71b5c.pkmkwvxqnn.xyz
-  - &id004
-    name: 🇺🇸_US_美国_2
+  - &id017
+    name: 🇺🇸_US_美国_4
     type: vmess
     server: jd2.shabijichang.com
     port: 80
@@ -65,50 +248,7 @@ proxies:
       path: /
       headers:
         host: jd2.shabijichang.com
-  - &id005
-    name: 🇺🇸_US_美国->🇰🇷_KR_韩国
-    type: vmess
-    server: cadld2.gophers.gay
-    port: 21106
-    cipher: auto
-    uuid: 6713cd03-2cd4-49e9-9d8a-b768ee0a72fb
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /
-  - &id006
-    name: 🇺🇸_US_美国_3
-    type: vmess
-    server: 107.167.16.85
-    port: 443
-    cipher: auto
-    uuid: 7640a1e7-9701-428e-a4b2-19b3e7dd6f9f
-    alterId: 64
-    tls: true
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /path/080822272914
-      headers:
-        host: www.51109057.xyz
-  - &id007
-    name: 🇺🇸_US_美国->🇳🇱_NL_荷兰_1
-    type: vmess
-    server: 45.199.138.191
-    port: 30000
-    cipher: auto
-    uuid: 418048af-a293-4b99-9b0c-98ca3580dd24
-    alterId: 64
-    tls: true
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /path/1696251522438
-      headers:
-        host: www.42077230.xyz
-  - &id008
+  - &id018
     name: 🇺🇸_US_美国->🇸🇦_SA_沙特阿拉伯
     type: vmess
     server: jd3.shabijichang.com
@@ -123,57 +263,7 @@ proxies:
       path: /
       headers:
         host: jd3.shabijichang.com
-  - &id009
-    name: 🇺🇸_US_美国->🇮🇳_IN_印度_2
-    type: vmess
-    server: hdlb2.shabijichang.com
-    port: 80
-    cipher: auto
-    uuid: c458695d-6908-45c3-9512-e0c46418454c
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /
-      headers:
-        host: hdlb2.shabijichang.com
-  - &id010
-    name: 🇺🇸_US_美国_4
-    type: vmess
-    server: 206.168.190.219
-    port: 2082
-    cipher: auto
-    uuid: e31ca750-71f7-11ee-b920-1239d0255272
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /vmws
-  - &id011
-    name: 🇺🇸_US_美国->🇳🇱_NL_荷兰_2
-    type: vmess
-    server: 156.225.67.234
-    port: 30000
-    cipher: auto
-    uuid: 93503dd5-245a-4eb1-ae2a-57ab9f2b3c29
-    alterId: 64
-    tls: true
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /path/1698239888914
-      headers:
-        host: www.47734647.xyz
-  - &id012
-    name: 🇫🇷_FR_法国
-    type: ss
-    server: 51.158.54.209
-    port: 443
-    password: asdKkaskJKfnsa
-    cipher: aes-256-cfb
-  - &id013
+  - &id019
     name: 🇱🇹_LT_立陶宛
     type: trojan
     server: 212.24.103.3
@@ -182,53 +272,8 @@ proxies:
     password: 2228e29d-942a-4ee8-b3c0-f4a846e3f355
     skip-cert-verify: true
     network: tcp
-  - &id014
+  - &id020
     name: 🇺🇸_US_美国_5
-    type: vmess
-    server: 156.225.67.104
-    port: 30000
-    cipher: auto
-    uuid: 29a5d48e-24f1-48fd-a5e1-9a46cb31032f
-    alterId: 64
-    tls: true
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /path/1698239888914
-      headers:
-        host: www.41758112.xyz
-  - &id015
-    name: 🇺🇸_US_美国_6
-    type: vmess
-    server: sbl2.shabijichang.com
-    port: 80
-    cipher: auto
-    uuid: c458695d-6908-45c3-9512-e0c46418454c
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /
-      headers:
-        host: sbl2.shabijichang.com
-  - &id016
-    name: 🇺🇸_US_美国_7
-    type: vmess
-    server: wnd2.shabijichang.com
-    port: 80
-    cipher: auto
-    uuid: c458695d-6908-45c3-9512-e0c46418454c
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /
-      headers:
-        host: wnd2.shabijichang.com
-  - &id017
-    name: 🇺🇸_US_美国_8
     type: vmess
     server: 104.21.75.246
     port: 80
@@ -242,45 +287,8 @@ proxies:
       path: /
       headers:
         host: sbl2.shabijichang.com
-  - &id018
-    name: 🇺🇸_US_美国->🇮🇳_IN_印度_3
-    type: vmess
-    server: mm2.shabijichang.com
-    port: 80
-    cipher: auto
-    uuid: c458695d-6908-45c3-9512-e0c46418454c
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /
-      headers:
-        host: mm2.shabijichang.com
-  - &id019
-    name: 🇺🇸_US_美国_9
-    type: vmess
-    server: wnd3.shabijichang.com
-    port: 80
-    cipher: auto
-    uuid: c458695d-6908-45c3-9512-e0c46418454c
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /
-      headers:
-        host: wnd3.shabijichang.com
-  - &id020
-    name: 🇨🇭_CH_瑞士
-    type: ss
-    server: 84.17.53.163
-    port: 80
-    password: asdKkaskJKfnsa
-    cipher: aes-256-cfb
   - &id021
-    name: 🇺🇸_US_美国->🇮🇳_IN_印度_4
+    name: 🇺🇸_US_美国->🇮🇳_IN_印度_2
     type: vmess
     server: 104.26.8.44
     port: 80
@@ -295,51 +303,20 @@ proxies:
       headers:
         host: a.109420.xyz
   - &id022
-    name: 🇩🇪_DE_德国_1
-    type: trojan
-    server: 3.120.63.163
-    port: 22222
-    udp: true
-    password: telegram-id-directvpn
-    sni: trj.rollingnext.co.uk
-    skip-cert-verify: true
-    network: tcp
-  - &id023
-    name: 🇵🇰_PK_巴基斯坦
-    type: trojan
-    server: 
-      hk1-reality.fp3kemyh-cm4s-2hak-2gb9-w3534umy2sq5.9d8f269f96b25232-759cbb36d6548597.kaufen
-    port: 443
-    udp: true
-    password: 7e23957d-535a-4dc6-9482-e6f44518da87
-    sni: 13-231-155-134.nhost.00cdn.com
-    skip-cert-verify: true
-    network: tcp
-  - &id024
-    name: 🇨🇳_CN_中国
+    name: 🇺🇸_US_美国_6
     type: vmess
-    server: 124.220.57.75
-    port: 80
+    server: 104.31.16.120
+    port: 8443
     cipher: auto
-    uuid: 1b3dd95b-f6dc-4f20-97aa-3b365358419c
+    uuid: aa0c4744-9568-4bee-a08b-73668a9b2a42
     alterId: 0
-    tls: false
+    tls: true
     skip-cert-verify: true
     network: ws
     ws-opts:
-      path: /
+      path: /cloudconebbb
       headers:
-        host: 124.220.57.75
-  - &id025
-    name: 🇩🇪_DE_德国_2
-    type: trojan
-    server: 35.157.14.187
-    port: 22222
-    udp: true
-    password: telegram-id-privatevpns
-    sni: trj.rollingnext.co.uk
-    skip-cert-verify: true
-    network: tcp
+        host: cloudconebbb.gorgorchicken.one
 proxy-groups:
   - name: PROXY
     type: select
@@ -388,9 +365,6 @@ proxy-groups:
       - *id020
       - *id021
       - *id022
-      - *id023
-      - *id024
-      - *id025
   - name: LOAD-BALANCE
     type: load-balance
     url: http://www.gstatic.com/generate_204
@@ -418,9 +392,6 @@ proxy-groups:
       - *id020
       - *id021
       - *id022
-      - *id023
-      - *id024
-      - *id025
   - name: SELECT
     type: select
     proxies:
@@ -446,9 +417,6 @@ proxy-groups:
       - *id020
       - *id021
       - *id022
-      - *id023
-      - *id024
-      - *id025
 rules:
   - RULE-SET,applications,DIRECT
   - DOMAIN,clash.razord.top,DIRECT
